--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
           <li>
             <img src="./icons/icons8-cart-80.png" alt="cart" height="20px" />
           </li>
-          <li>
+          <li class="search-bar">
+            <label for="search">
             <img
               src="./icons/icons8-search-50.png"
               alt="search"
               height="20px"
             />
+          </label>
+          <input type="search" class="i-search" id="search" placeholder="search">
           </li>
         </ul>
       </div>
