--- a/index.html
+++ b/index.html
@@ -199,9 +199,50 @@
         Delicious boneless skinless chicken breasts and fresh mushrooms in garlic and white wine <br>sauce. Cuisine is a team work of Cuisine Restaurant Cafe. We aim at promoting the foodstuff <br>industry through the branches we establish and through the new dishes.
       </p>
     </section>
+
     <footer>
-    <small>&copy; Developed By <a href="https://www.github.com/Ejiro-Frances" target="_blank">Ejiro Frances</a></small>
-    </footer>
+     <section class="footer-container">
+        <article>
+          <h3>Divi Cuisine</h3>
+          <h6>food and beverage</h6>
+          <p>Just like a perfectly baked pastry, we created Cuisine with special love and it shows.</p>
+        </article>
+
+        <article>
+          <h3>Open Hours</h3>
+          <p>Mon-Fri: 9AM - 6PM</p>
+          <p>Saturday: 9AM - 4PM</p>
+          <p>Sunday: Closed</p>
+        </article>
+
+        <article>
+          <h3>Contact Us</h3>
+          <p>176 W street name, New York, NY 10014</p>
+          <p>Email: info@yoursite.com</p>
+          <p>Telephone: +1(800)123- 4566</p>
+        </article>
+
+        <article>
+          <h3>Subscribe Newsletter</h3>
+          <input type="email" placeholder="Email Address" id="newsletter">
+        </article>
+      </section>
+
+      <section class="small-container">
+      <small> 2024 &copy; Developed By <a href="https://www.github.com/Ejiro-Frances" target="_blank">Ejiro Frances</a> Design by Mithun Ray</small>
+      <div class="social-links">
+        <div>
+          <img src="./icons/social--facebook-with-circle.svg" alt="facebook-icon">
+        </div>
+        <div>
+          <img src="./icons/arcticons--x-twitter.svg" alt="twitter">
+        </div>
+        <div>
+          <img src="./icons/cib--instagram.svg" alt="instagram-icon">
+        </div>
+      </div>  
+    </section>
+  </footer>
     <script src="./js/script.js"></script>
   </body>
 </html>
